--- a/index.html
+++ b/index.html
@@ -302,7 +302,7 @@
         <div class="container-fluid">
           <div class="row no-gutter">
             <div class="col-lg-4 col-sm-6">
-              <a href="alex.poux@gatech.edu" class="portfolio-box">
+              <a href="mailto:alex.poux@gatech.edu" class="portfolio-box">
                 <img src="team-pics/alex3-min.jpg" class="img-responsive" alt="">
                 <div class="portfolio-box-caption">
                   <div class="portfolio-box-caption-content">
